* Tue Nov 19 2019 Luke Stigdon <git@lukestigdon.com> - 7.11.1-0
- Correct pupmod::master::profiler_output_file option name

* Mon Sep 02 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.11.1-0
- Ensure that pupmod::pass_two does not conflict with the internal PE
  configuration code for group ownership of puppet.conf
- Support simp-simplib < 5

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 7.11.1-0
- Support puppetlabs/concat 6.x and puppetlabs/inifile 3.x.

* Thu Jul 04 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.11.0-0
- Add a pupmod::server_distribution function for more accurately determining
  the version of the puppet server installed on the target system.
- Refactor some of the underlying code to use the new function and be safer for
  PE installations.

* Wed Jul 03 2019 Bob Vincent <pillarsdotnet@gmail.com> - 7.11.0-0
- Ensure that the 'environment' setting in puppet.conf is forced into the
  'agent' section.
- Ensure that the 'environment' setting in puppet.conf does not exist in the
  'main' section.

* Fri Jun 28 2019 Steven Pritchard <steven.pritchard@onypoint.com> - 7.11.0-0
- Add v2 compliance_markup data

* Fri Jun 28 2019 Bob Vincent <pillarsdotnet@gmail.com> - 7.10.2-0
- Add ca params for auth-extensions and subject-alt-names.

* Tue May 28 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 7.10.1-0
- No longer hardcode the puppet uid and puppet gid to 52.

* Fri May 17 2019 Robert Vincent <robert.vincent@conning.com> - 7.10.1-0
- Add missing gem-path setting to puppetserver.conf template.

* Mon Mar 25 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 7.10.0-0
- Standardized cron datatypes to use the Simplib::Cron::### types.  This
  allows more flexibility in cron scheduling.

* Fri Mar 08 2019 Nick Miller <nick.miller@onyxpoint.com> - 7.9.0-0
- Added Puppet 6 support
- Add management of $ssldir and $rundir
- Ensure that the puppet client environment is set to that which is provided by
  the server by default.
